--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: .
       dockerfile: nginx/Dockerfile.nossl # change "nossl" to "ssl" for SSL support
     ports:
-      - "80:80"
+      - "80:${PORT}"
      # - "443:443" # uncomment for SSL support
     restart: unless-stopped
   server:
